fix boost-menu overflow

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -297,6 +297,10 @@ body {
     opacity: 1;
 }
 
+.boost-menu__header {
+    overflow: scroll;
+}
+
 .upgrade-menu {
     position: fixed;
     bottom: -100%;
